# SNAKE

.github/workflows/: arduino.yml  pc.yml
pc/: controller.py  pyproject.toml
sketch/: sketch.ino
